[tool.poetry]
name = "apple-health"
version = "0.1.0"
description = ""
authors = ["Tim Helfensdörfer <tim@visualappeal.de>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.3.3"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
